style: fixed sizing and layout issues

--- a/src/app/sections/location/locationsection.css
+++ b/src/app/sections/location/locationsection.css
@@ -34,15 +34,20 @@
   margin: 0px 12px;
 }
 
-.location-section-api {
+.location-section-map {
   width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.map-api {
   background-image: url("placeholdermap.PNG");
   background-size: 100% 100%;
+  height: 400px;
+  width: 400px;
 }
 
 .location-section p {
@@ -57,9 +62,14 @@
     align-items: center;
   }
   .location-section-api {
-    width: 80%;
-    height: 400px;
-    margin: 40px 0px;
+    width: 100%;
+    height: 320px;
+  }
+  .map-api {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    height: 320px;
+    width: 320px;
   }
   .location-section-details {
     margin-top: 40px;
